# pokerlottery

./: .gitignore  README.md  pyproject.toml
pokerlottery/: __init__.py  about.py  compute_winner.py  index.py
pokerlottery/templates/: base.html
pokerlottery/templates/about/: index.html
pokerlottery/templates/index/: index.html
pokerlottery/templates/winner/: index.html
tests/: conftest.py  test_compute_winner.py  test_factory.py
