[project]
name = "pokerlottery"
version = "0.0.1"
description = "Pick a pseudo-random winner in proportion to chip count."
dependencies = [
    "flask",
]
requires-python = ">= 3.12"
authors = [
    { name = "Daniel Filan", email = "df@danielfilan.com" }
]
readme = "README.md"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pokerlottery"]